@@ -444,14 +444,6 @@ public class GroupTreeView extends BorderPane {
             changedGroups.forEach(value -> selectNode(value, true));
         }
 
-        if (localDragboard.hasBibEntries()) {
-            List<BibEntry> entries = localDragboard.getBibEntries();
-            stateManager.getActiveDatabase().ifPresent(database ->
-                    stateManager.getUndoManager(database).addEdit(Localization.lang("Assign entries to group"),
-                            edit -> edit.addAll(row.getItem().addEntriesToGroup(entries))));
-            success = true;
-        }
-
         if (dragboard.hasFiles()) {
             BibDatabaseContext database = stateManager.getActiveDatabase().orElse(null);
             ImportHandler importHandler = new ImportHandler(
@@ -462,14 +454,35 @@ public class GroupTreeView extends BorderPane {
                     stateManager,
                     dialogService,
                     taskExecutor);
-            List<Path> files = dragboard.getFiles().stream().map(File::toPath).collect(Collectors.toList());
+
+            List<Path> files = dragboard.getFiles().stream()
+                                        .map(File::toPath)
+                                        .toList();
+
+            if (!importHandler.confirmBibFileImportIfNecessary(files)) {
+                event.setDropCompleted(false);
+                event.consume();
+                return;
+            }
+
             stateManager.setSelectedGroups(database, List.of(row.getItem().getGroupNode()));
             importHandler.importFilesInBackground(files, event.getTransferMode())
                          .executeWith(taskExecutor);
             success = true;
+        } else if (shouldAssignLocalEntries(dragboard, localDragboard)) {
+            List<BibEntry> entries = localDragboard.getBibEntries();
+            stateManager.getActiveDatabase().ifPresent(database ->
+                    stateManager.getUndoManager(database).addEdit(
+                            Localization.lang("Assign entries to group"),
+                            edit -> edit.addAll(row.getItem().addEntriesToGroup(entries))));
+            success = true;
         }
         event.setDropCompleted(success);
         event.consume();
+    }
+
+    static boolean shouldAssignLocalEntries(Dragboard dragboard, CustomLocalDragboard localDragboard) {
+        return !dragboard.hasFiles() && localDragboard.hasBibEntries();
     }
 
     private void handleOnDragOver(TreeTableRow<GroupNodeViewModel> row, GroupNodeViewModel originalItem, DragEvent event) {
